# tex-slasher

./: Cargo.toml
src/: main.rs
